@@ -31,6 +31,8 @@ Changes to Squid-2.4.DEVEL3 ():
 	  penalty.
 	- %s can now be used in cache_swap_log and will be substituded with
 	  the last path component of cache_dir.
+	- no_cache is now a full ACL check without, allowing most ACL types
+	  to be used.
 
 Changes to Squid-2.4.DEVEL2 ():
 
